@@ -6,6 +6,9 @@ Note: This file contains only changes in the 'default' branch.
 
 2018-04-29
 
+  - Implemented polymorphic NEG() function in the SQL shell, which works on
+    instances of Decimal, Amount, Position, Inventory.
+
   - Changed the SQL shell's operators to dispatch to Python's default operator
     selection instead of coercing to Decimal instances.
 
